# bait-al-maal

./: CHANGELOG.md  README.md
app/Desktop/src-tauri/: Cargo.toml
app/Desktop/src/components/: NavLink.vue
app/Desktop/src/views/: AccountsView.vue  DashboardView.vue  GoalsView.vue  RecurringView.vue  ReportsView.vue  TransactionsView.vue
app/Mobile/bait_al_maal/test/: widget_test.dart
apps/android/app/: build.gradle.kts
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/assets/: main.css
apps/mobile/bait_al_maal/: README.md  pubspec.yaml
docs/: architecture.md  development.md  error-checklist.md  error-handling.md  git-workflow.md  roadmap.md
docs/decisions/: 0001-rust-core.md  0002-kotlin-compose.md  0003-repository-structure.md  0004-versioning.md
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: error.rs  lib.rs
rust/core/src/account/: entity.rs  error.rs  mod.rs  repository.rs  service.rs
rust/core/src/budget/: entity.rs  mod.rs
rust/core/src/categories/: entity.rs
rust/core/src/category/: mod.rs
rust/core/src/infrastructure/: mod.rs
rust/core/src/infrastructure/database/: connection.rs  mod.rs
rust/core/src/infrastructure/database/schemas/: account.sql  budget.sql  category.sql  transaction.sql
rust/core/src/transaction/: transaction.rs
rust/core/src/user/: entity.rs  mod.rs
rust/frb/: Cargo.toml
(+25 files in other folders)
